tests/typing/bad/testfile-for-4.jl
for i = 1 : (39 + "three") end
